# configuration-manager

./: CMakeLists.txt  LICENSE  README.md  com.auterion.configuration_manager.conf
.github/workflows/: build_pkg_multi_arch.yml  build_test_ubuntu.yml
Tools/: check_code_format.sh  generate_debian_changelog.sh  generate_flow_diagram.py  mavlink.conf  software_interface.cpp.dot
config/: configuration-manager.conf
debian/: control  copyright
include/: configuration_manager.h  dbus_interface.h  mav_settings.h  software_interface.h  usm.h
include/software_interfaces/: autopilot_manager_config.h
src/: CMakeLists.txt  configuration_manager.cpp  dbus_interface.cpp  main.cpp  software_interface.cpp
src/mavlink_test_app/: CMakeLists.txt  main.cpp  mavlink_handler.cpp  mavlink_handler.h  mavlink_parameters.cpp  mavlink_parameters.h
src/software_interfaces/: autopilot_manager_config.cpp
test/: CMakeLists.txt  mav_settings_test.cpp
